[FIX] cet_website_design: Too big logo

--- a/cycle_en_terre_website_design/static/src/less/cycle_en_terre_website_design.less
+++ b/cycle_en_terre_website_design/static/src/less/cycle_en_terre_website_design.less
@@ -44,7 +44,6 @@ header {
         a.navbar-brand.logo {
         float: none;
             img {
-                height:auto;
                 margin: 0 auto;
             }
         }
